--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-slick-carousel": "^1.0.6",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
